added headshot to images + added additional column in left panel

--- a/index.html
+++ b/index.html
@@ -87,40 +87,49 @@
   </head>
   <body>
       <div class="container-fluid bg font-color-w">
-        <div class="row pl-2">
-            <div class="col-md ml-3 pt-5">
-              <div class="row">
-                <div class="col">
-                  <ul class="list-unstyled" >
-                    <li id="name"></li>
-                    <li id="title"></li>
-                    <li id="description"></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="row">
-                <div class="d-flex flex-column bd-highlight mb-3">
-                  <a href="#aboutJumpTo" style="color: rgb(241, 246, 255); font-size:small;" class="p-2">about me</a>
-                  <a href="#experienceJumpTo" style="color: rgb(241, 246, 255); font-size:small;" class="p-2">experience</a>
-                  <a href="#projectsJumpTo" style="color: rgb(241, 246, 255); font-size:small;" class="p-2">projects</a>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <a href="images/github-mark-white.png"><i class="fab fa-git-hub"></i></a>
-                </div>
-                <div class="col">
-                  <a href="https://www.facebook.com/KPDMadhuka"><i class="fab fa-facebook"></i></a>
-                </div>
-                <div class="col">
-                  <a href="http://twitter.com/KPDMadhuka"><i class="fab fa-twitter"></i></a>
-                </div>
-
-              </div>
+        <div class="row">
+            <div class="col-md pt-5">
+                <div class="row">
+                  <!-- Left Side of Intro-->
+                  <div class="col">
+                      <div class="row">
+                          <div class="col">
+                            <img src="images/headShot.png" style="border-radius:50%;background-size: cover; background: transparent;"/>
+                            <ul class="list-unstyled" >
+                              <li class=""id="name"></li>
+                              <li class="font-italic"id="title"></li>
+                              <li id="description"></li>
+                            </ul>
+                          </div>
+                      </div>
+                      <div class="row ">
+                          <div class="d-flex flex-column bd-highlight ml-2 mb-3">
+                            <a href="#aboutJumpTo" style="color: rgb(241, 246, 255); font-size:small;" class="p-2">about me</a>
+                            <a href="#experienceJumpTo" style="color: rgb(241, 246, 255); font-size:small;" class="p-2">experience</a>
+                            <a href="#projectsJumpTo" style="color: rgb(241, 246, 255); font-size:small;" class="p-2">projects</a>
+                          </div>
+                      </div>
+                      <div class="row d-inline-flex">
+                          <div class="col">
+                            <a href="https://www.github.com/justincamp1776/" target="_blank"><i class="fab fa-git-hub">
+                              <img src="images/github-mark-white.png" alt="github-logo" style="max-width:25px; max-height:25px;"/>
+                            </i></a>
+                          </div>
+                          <div class="col">
+                            <a href="https://www.linkedin.com/in/justcamp1776/" target="_blank"><i class="fab fa-git-hub">
+                              <img src="images/LinkedIn-Blue-14@2x.png" alt="linkedin-logo" style="max-width:60px; max-height:60px;"/>
+                            </i></a>
+                          </div>
+                      </div>
+                   </div>
+              <div class="col">
+                <!-- extensible -->
             </div>
+          </div>
+        </div>
             <div class="col-md pt-5" >
               <div class="contentBox">
-                <div class="justify-content-around mb-3"id="about">
+                <div class="justify-content-around font-weight-light mb-3"id="about">
                   <a id="aboutJumpTo"><h5 class="mb-3 font-italic font-weight-light">About Me</h5></a>
                 </div>
                 <a id="experienceJumpTo"><h5 class="mb-4 font-italic font-weight-light">Experience</h5></a>
