testing aws code pipeline config

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                    </div>
               <div class="col">
                 <div class="row">
-                    <p id="welcome">Hi, I'm Justin. Welcome to my site.</p>
+                    <p id="welcome">Hi, I'm Justin. Welcome to my site. This is a test.</p>
                 </div>
             </div>
           </div>
