added borders + addtl styling to content box

--- a/index.html
+++ b/index.html
@@ -15,38 +15,17 @@
 
       $(document).ready(function () {
         let intro     = getIntro();
-        let stmtArr   = getStrStmt().split(" ");
         let about     = getAbout();
         let exp       = getExperience();
         let projects  = getProjects();
         render(intro);
-        printText(stmtArr);
         render(exp);
         render(about);
         render(projects);
-
+        
 
       });
 
-      function sleep(milliseconds) {  
-          return new Promise(resolve => setTimeout(resolve, milliseconds));  
-      }  
-
-      async function printText(arrOne){
-        let timeout = 0;
-        console.log(arrOne);
-        for(var i=0; i<arrOne.length; i++){
-          let arrTwo = arrOne[i].split(); 
-          for(var j=0; j<arrTwo.length; j++ ){
-            $("#openStmnt").append(arrTwo[j] + " ")
-            await sleep(170);
-            if(i==2 && j==arrTwo.length-1){
-              await sleep(700);
-              $("#openStmnt").append("</br>")
-            }
-          }
-        }
-      }
 
       function render(data){
         for(var i=0; i<Object.keys(data).length; i++){
@@ -77,35 +56,39 @@
 
       function renderExperience(obj){
         $("#expList").append(
-          '<div class="flex-column align-items-start bg font-color-w mb-3">'+
+          '<div class="flex-column align-items-start bg font-color-w mt-3">'+
             '<div class="d-flex w-60 justify-content-around p-2" style="font-size:x-small;">'+
-              '<div class="row">'+
-                '<div class="col-lg-3 flex-column">' +
+              '<div class="row ">'+
+                '<div class="col-lg-3 flex-column mb-2">' +
                 '<h5 class="mb-1">'+ obj.jobTitle +'</h5>'+
                 '<h6 class="mb-1 font-weight-light">'+ obj.company +'</h6>'+
                 '<p class="mb-1">'+ obj.location +'</p>'+
-                '<p class="mb-3 font-italic">'+ obj.startDate + " - " + obj.endDate +'</p>'+
+                '<p class="mb-1 font-italic">'+ obj.startDate + " - " + obj.endDate +'</p>'+
                 '</div>'+
-                '<div class="col-lg-9 pr-5 d-flex text-wrap h-26" style="position:relative; overflow-x:scroll; overflow-y:scroll;">'+
+                '<div class="col-lg-9 border-bottom border-secondary pr-5 d-flex text-wrap h-26" style="position:relative; overflow-x:scroll; overflow-y:scroll;">'+
+                  '<div class="row"><div class="col">'+
+                    '<p class="">'+ obj.jobTitle +'</p>'+
+                    '</div><div class="col">'+
+
+                  '</div></div>'+
                   '<ul>'+
                     '<li><p class="text-wrap">'+ obj.d1 +'</p></li>' +
                     '<li><p class="text-wrap">'+ obj.d2 +'</p></li>' +
                     '<li><p class="text-wrap">'+ obj.d3 +'</p></li>' +
                     '<li><p class="text-wrap">'+ obj.d4 +'</p></li> ' +
-                '<ul></div></div></div></div>'
+                  '<ul></div></div></div></div>'
         );
       }
 
       function renderProjects(obj){
           $("#projList").append(
-            '<div class="row mb-5"><div class="col-md-3"><div class="row justify-content-center mb-2"><img class="mt-3"src="images/'+ obj.img + '" alt="edi image" height="150px" width="150px"/></div>'+
+            '<div class="row mb-5"><div class="col-md-3"><div class="row justify-content-start mb-2"><img class="mt-4"src="images/'+ obj.img + '" alt="edi image" height="150px" width="150px"/></div>'+
              '</div>'+
               '<div class="col-md-9"><div class="card border-0 w-100 bg">'+
-                '<div class="card-body">'+
-                  '<div class="row"><div class="col-md"><h5 class="card-title" id="projTitle">'+  obj.title +'</h5></div>'+
-                  '<div class="col-md justify-content-start float-left">' +
+                '<div class="card-body center">'+
+                  '<div class="row clearfix"><h5 class="card-title" id="projTitle">'+  obj.title + "  " +
                     '<a href="https://www.github.com/justincamp1776/'+ obj.repository +'" target="_blank">'+
-                      '<img src="images/github-mark-white.png" alt="github-logo" style="max-width:25px; max-height:25px;"/></a></div></div>'+
+                      '<img class="mb-2" src="images/github-mark-white.png" alt="github-logo" style="max-width:25px; max-height:25px;"/></a></h5></div>'+
                   '<div class="row"><div class="flex-column">' +
                   '<p class="" style="font-size:small" id="projDescr">'+ obj.description +'</p>'+
                   '<p class="card-text font-italic" style="font-size:small;" id="techStack">'+ obj.techStack +'</p>'+
@@ -116,8 +99,8 @@
 
       function renderIntro(obj){
         console.log("intro" + obj.name)
-        $("#name").append('<h2>'+ obj.name +'</h2>');
-        $("#title").append('<h5>'+ obj.title +'</h5>');
+        $("#name").append('<h4>'+ obj.name +'</h4>');
+        $("#title").append('<h6>'+ obj.title +'</h6>');
         $("#description").append('<p class="text-wrap font-italic font-weight-light">'+ obj.description +'</p>');
       }
 
@@ -128,11 +111,10 @@
   </script>
   </head>
   <body>
-      <div class="container-fluid bg font-color-w">
+      <div class="container-fluid bg font-color-w px-5">
         <div class="row">
             <div class="col-md pt-5 d-flex justify-content-center">
                 <div class="row">
-                  <!-- Left Side of Intro-->
                   <div class="col">
                       <div class="row">
                         <div class="card border-0" style="width: 18rem; background-color:rgb(18, 18, 46);">
@@ -166,19 +148,25 @@
                    </div>
               <div class="col">
                 <div class="row">
-                    <p class="textBox" id="openStmnt"></p>
+                  <!---->
+                    
                 </div>
             </div>
           </div>
         </div>
             <div class="col-md pt-5" >
               <div class="contentBox">
-                <div class="justify-content-around font-weight-light mb-3"id="about">
-                  <a id="aboutJumpTo"><h5 class="mb-5 font-italic font-weight-light">About Me</h5></a>
+                <div class="row mt-5 mb-2 w-100 border-bottom border-white">
+                 <a id="aboutJumpTo"><h5 class="align-text-bottom font-italic font-weight-light">About Me</h5></a>
                 </div>
-                <a id="experienceJumpTo"><h5 class="mb-5 font-italic font-weight-light">Experience</h5></a>
-                  <div class="list-group" id="expList"></div>
-                <a id="projectsJumpTo"><h5 class="mb-5 mt-4 font-italic font-weight-light">Projects</h5></a>
+                <div class="justify-content-around font-weight-light mb-3"id="about"></div>
+                <div class="row mt-5 mb-2 w-100 border-bottom border-warning">
+                  <a id="experienceJumpTo"><h5 class="align-text-bottom font-italic font-weight-light">Experience</h5></a>
+                </div>
+                <div class="list-group" id="expList"></div>
+                <div class="row mt-5 mb-2 w-100 border-bottom border-white">
+                 <a id="projectsJumpTo"><h5 class="mt-4 align-text-bottom font-italic font-weight-light">Projects</h5></a>
+                </div>
                 <div class="list-group" id="projList"></div>
               </div>
             </div>
