--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
       function renderIntro(obj){
         console.log("intro" + obj.name)
-        $("#name").append('<h4>'+ obj.name +'</h4>');
-        $("#title").append('<h6>'+ obj.title +'</h6>');
+        $("#name").append(obj.name);
+        $("#title").append(obj.title);
         $("#description").append('<p class="text-wrap font-italic font-weight-light">'+ obj.description +'</p>');
       }
 
@@ -110,35 +110,38 @@
   <body>
       <div class="container-fluid bg font-color-w pt-5">
         <div class="row">
-            <div class="col-md pl-5 pt-5 d-flex">
-              <div class="card border-0" style="width: 18rem; background-color:rgb(18, 18, 46);">
-                <img class="card-img-top ml-4" src="images/headShot.png" style="height:180px; width:200px;"alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title" id="name"></h5>
-                  <p class="font-weight-light" id="title"></p>
-                  <p class="card-text font-italic" id="description"></p>
+            <div class="col-md pl-5">
+              <div class="row">
+                <div class="col-2 flex-column pt-5">
+                    <div class="pb-5 d-flex justify-content-center"><a href="#aboutJumpTo" style="font-size:medium; color:#ffffff;">about me</a></div>
+                    <div class="pb-5 d-flex justify-content-center"><a href="#experienceJumpTo" style="font-size:medium; color:#ffffff;">experience</a></div>
+                    <div class="pb-5 d-flex justify-content-center"><a href="#projectsJumpTo" style="font-size:medium; color:#ffffff;">projects</a></div>
+                 
+                  <div class="d-flex justify-content-center pb-5">
+                    <a href="https://www.github.com/justincamp1776/" target="_blank"><i class="fab fa-git-hub">
+                      <img src="images/github-mark-white.png" alt="github-logo" style="max-width:35px; max-height:35px;"/>
+                    </i></a>
+                  </div>
+                  <div class="d-flex justify-content-center">
+                    <a href="https://www.linkedin.com/in/justcamp1776/" target="_blank"><i class="fab fa-git-hub">
+                      <img src="images/in.png" alt="linkedin-logo" style="max-width:80px; max-height:80px;"/>
+                    </i></a>
+                  </div>
                 </div>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item list-unstyled border-0" style="background-color:rgb(18, 18, 46);"> <a href="#aboutJumpTo" style="font-size:small;" class="p-2">__about me</a></li>
-                  <li class="list-group-item list-unstyled border-0" style="background-color:rgb(18, 18, 46);"><a href="#experienceJumpTo" style="font-size:small;" class="p-2">__experience</a></li>
-                  <li class="list-group-item list-unstyled border-0" style="background-color:rgb(18, 18, 46);"><a href="#projectsJumpTo" style="font-size:small;" class="p-2">__projects</a></li>
-                </ul>
-                <div class="card-body">
-                  <div class="row d-inline-flex">
-                    <div class="col">
-                      <a href="https://www.github.com/justincamp1776/" target="_blank"><i class="fab fa-git-hub">
-                        <img src="images/github-mark-white.png" alt="github-logo" style="max-width:25px; max-height:25px;"/>
-                      </i></a>
-                    </div>
-                    <div class="col">
-                      <a href="https://www.linkedin.com/in/justcamp1776/" target="_blank"><i class="fab fa-git-hub">
-                        <img src="images/LinkedIn-Blue-14@2x.png" alt="linkedin-logo" style="max-width:60px; max-height:60px;"/>
-                      </i></a>
+                <div class="col-10">                  <div class="card border-0 pb-5 pt-3" style="width: 18rem; background-color:rgb(18, 18, 46);">
+                    <img class="card-img-top ml-4" src="images/nixon.jpg" style="border-radius:2.5%" alt="Card image cap">
+                    <div class="card-body ">
+                      <h2 class="card-title d-flex justify-content-center" id="name"></h2>
+                      <p class="font-weight-light d-flex justify-content-center" id="title"></p>
+                      <p class="card-text font-italic d-flex justify-content-center" id="description"></p>
+                      <div class="border-bottom border-warning pl-5"></div>
                     </div>
                   </div>
+                </div>
+                </div>
+
               </div>
-                        </div>
-                   </div>
+              
               <div class="col-md d-flex justify-content-center" >
                 <div class="contentBox">
                   <div class="row mb-2 w-100 border-bottom border-white">
@@ -157,5 +160,25 @@
               </div>
         </div>
       </div>
+      <div class="bg-dark">
+          <div class="container-fluid align-items-center font-color-w pb-5" style="min-height: 200px;">
+            <div class="row d-flex justify-content-between pt-5 pl-4 pb-5">
+              <div class="col-md-4 offset-md-1">
+                <ul class="list-unstyled">
+                  <li><a class="font-color-w" href="#">Resume</a></li>
+                  <li><a class="font-color-w" href="#">Projects</a></li>
+                  <li><a class="font-color-w" href="#">Contact</a></li>
+                </ul>
+              </div>
+              <div class="col-md-4 offset-md-1 flex-column">
+                <a href="https://aws.amazon.com/what-is-cloud-computing"><img src="https://d0.awsstatic.com/logos/powered-by-aws-white.png" alt="Powered by AWS Cloud Computing"></a>
+              </div>
+            </div>
+          </div>
+      </div>
+        <div class="row justify-content-around" style="max-height:5px;">
+          <p class="pt-5"><span>&copy; </span> 2023 All rights are reserved.</p>
+          <div><p class="pt-5">Baltimore, MD 21228</p></div>
+        </div>
     </body>
 </html>
